[gd_scene load_steps=9 format=3 uid="uid://nsy377c3n3a2"]

[ext_resource type="Script" path="res://Script/hud.gd" id="1_4dxal"]
[ext_resource type="Texture2D" uid="uid://c6xv8oce53bte" path="res://krita/coeur.png" id="2_t04iy"]

[sub_resource type="CanvasTexture" id="CanvasTexture_noidn"]

[sub_resource type="Animation" id="Animation_bqqfh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Decompte:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["2"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Decompte:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Decompte:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(620, 106)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Display_round:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(54, 257)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Display_round:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kfc65"]
resource_name = "compte a rebour"
length = 3.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Decompte:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.66667, 2.86667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "Go"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Decompte:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.666667, 1, 1.2, 1.66667, 2, 2.2, 3, 3.4),
"transitions": PackedFloat32Array(1, 1, 1, 2, 1, 1, 1, 28.4746, 2.07052, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Decompte:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.4),
"transitions": PackedFloat32Array(2, 1, 1, 2, 1, 1, 2, 1, 1),
"update": 0,
"values": [Vector2(620, 106), Vector2(620, 200), Vector2(620, 40), Vector2(620, 106), Vector2(620, 200), Vector2(620, 40), Vector2(620, 106), Vector2(620, 200), Vector2(620, 106)]
}

[sub_resource type="Animation" id="Animation_axmhn"]
resource_name = "slash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fhq43"]
resource_name = "round_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Display_round:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1.41422, 2.21913, 1),
"update": 0,
"values": [Vector2(54, 257), Vector2(507.5, 318), Vector2(961, 379)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Display_round:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.812254, 0.757859, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jwd5g"]
_data = {
"RESET": SubResource("Animation_bqqfh"),
"compte a rebour": SubResource("Animation_kfc65"),
"round_animation": SubResource("Animation_fhq43"),
"slash": SubResource("Animation_axmhn")
}

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_4dxal")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_noidn")

[node name="Decompte" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 106.0
offset_right = 47.0
offset_bottom = 175.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "2"
horizontal_alignment = 1

[node name="Display_round" type="Label" parent="."]
offset_left = 54.0
offset_top = 257.0
offset_right = 393.0
offset_bottom = 375.0
theme_override_font_sizes/font_size = 86
text = "ROUND "
horizontal_alignment = 1

[node name="Flash_blanc" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jwd5g")
}

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jwd5g")
}

[node name="Health_model" type="TextureRect" parent="."]
offset_left = 28.0
offset_top = 26.0
offset_right = 153.0
offset_bottom = 151.0
texture = ExtResource("2_t04iy")

[node name="Health_display" type="GridContainer" parent="."]
offset_left = 28.0
offset_top = 26.0
offset_right = 68.0
offset_bottom = 66.0
columns = 3

[node name="Match_display" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 215.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Game_over_display" type="VBoxContainer" parent="Match_display"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Match_display/Game_over_display"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "Seem like you was defeat"

[node name="HBoxContainer" type="HBoxContainer" parent="Match_display/Game_over_display"]
layout_mode = 2
theme_override_constants/separation = 39
alignment = 1

[node name="Retry" type="Button" parent="Match_display/Game_over_display/HBoxContainer"]
layout_mode = 2
text = " RETRY   ? "

[node name="Main_menu" type="Button" parent="Match_display/Game_over_display/HBoxContainer"]
layout_mode = 2
text = " QUIT "

[node name="Game_win_display" type="VBoxContainer" parent="Match_display"]
visible = false
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="Match_display/Game_win_display"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "YOU DEFAETED YOUR OPPONENT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Match_display/Game_win_display"]
layout_mode = 2
theme_override_constants/separation = 39
alignment = 1

[node name="Next" type="Button" parent="Match_display/Game_win_display/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 101
text = " Next "

[node name="Main_menu" type="Button" parent="Match_display/Game_win_display/HBoxContainer"]
layout_mode = 2
text = " QUIT "

[connection signal="animation_finished" from="Flash_blanc" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_player_animation_finished"]
[connection signal="button_up" from="Match_display/Game_over_display/HBoxContainer/Retry" to="." method="_on_retry_button_up"]
[connection signal="button_up" from="Match_display/Game_over_display/HBoxContainer/Main_menu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="Match_display/Game_win_display/HBoxContainer/Next" to="." method="_on_next_button_up"]
[connection signal="button_up" from="Match_display/Game_win_display/HBoxContainer/Main_menu" to="." method="_on_main_menu_button_up"]
